# ACG_Project

./: .gitignore  CMakeLists.txt  README.md  UPDATELOG.md  compile.sh  demo.avi  linux_setup.sh  setup.sh
assets/: glass.blend  rigid.blend  water.blend
assets/fluid/: generator.py  test.fluid  two_cuboid.fluid  two_cuboid2.fluid
config/: 2cloth1fluid.yaml  basic_DFSPH.yaml  basic_PICFLIP.yaml  basic_XPBD.yaml  basic_config.yaml  basic_config2.yaml  test.yaml  test2.yaml  test3.yaml  test_cloth.yaml  test_coupling.yaml
report/: midterm_report.tex  midterm_report_main.tex  midterm_report_reference.bib
src/: cloth.cpp  cloth.cu  cloth.h  collision.cpp  collision.cu  collision.h  cuda_utils.cu  cuda_utils.h  env.cpp  env.h  fluid.cpp  fluid.cu  fluid.h  genvideo.h  geometry.cpp  geometry.h  grid.cpp  grid.h  main.cpp  marching_cube.cpp  marching_cube.h  render.cpp  render.h  render.py  rigid_body.cpp  rigid_body.h  simulation.cpp  simulation.h  spatial_hash.cpp  spatial_hash.cu  spatial_hash.h  tiny_obj_loader.h  utils.cpp  utils.h  xpbd_constraints.h  yaml.h
